--- a/index.html
+++ b/index.html
@@ -262,10 +262,21 @@
         </div>
         <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">Certifications</h3>
         <div class="space-y-3">
-         <div class="flex items-center gap-3 p-3 rounded-lg" style="background-color: #1a2f1a;">
-          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z" />
-          </svg><span class="text-sm" style="color: #d1d5db;">Windows 11 Advance Troubleshooting</span>
-         </div>
+         <a href="image/win.jpg" 
+   target="_blank" 
+   class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer" 
+   style="background-color: #1a2f1a;">
+
+    <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+        <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+    </svg>
+
+    <span class="text-sm" style="color: #d1d5db;">
+        Windows 11 Advance Troubleshooting
+    </span>
+
+</a>
+
          <div class="flex items-center gap-3 p-3 rounded-lg" style="background-color: #1a2f1a;">
           <svg class="w-5 h-5" viewbox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z" />
           </svg><span class="text-sm" style="color: #d1d5db;">Microsoft 365 Administration</span>
@@ -630,6 +641,7 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cb987c461a70dcb',t:'MTc3MDcwNDczOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
