--- a/index.html
+++ b/index.html
@@ -260,40 +260,64 @@
         <h3 class="font-mono-custom text-lg mb-6" style="color: #22c55e;"> Tools &amp; Platforms</h3>
         <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">ServiceNow</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">TeamViewer</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>
         </div>
-        <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">Certifications</h3>
-        <div class="space-y-3">
-         <a href="image/win.jpg" 
-   target="_blank" 
-   class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer" 
-   style="background-color: #1a2f1a;">
+      <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">
+    Certifications
+</h3>
 
-    <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
-        <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
-    </svg>
+<div class="space-y-3">
 
-    <span class="text-sm" style="color: #d1d5db;">
-        Windows 11 Advance Troubleshooting
-    </span>
+    <!-- Certificate 1 -->
+    <a href="image/win.jpg" target="_blank" 
+       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
+       style="background-color: #1a2f1a;">
+        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+        </svg>
+        <span class="text-sm" style="color: #d1d5db;">
+            Windows 11 Advance Troubleshooting
+        </span>
+    </a>
 
-</a>
+    <!-- Certificate 2 -->
+    <a href="image/mic.jpg" target="_blank" 
+       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
+       style="background-color: #1a2f1a;">
+        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+        </svg>
+        <span class="text-sm" style="color: #d1d5db;">
+            Microsoft 365 Administration
+        </span>
+    </a>
 
-         <div class="flex items-center gap-3 p-3 rounded-lg" style="background-color: #1a2f1a;">
-          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z" />
-          </svg><span class="text-sm" style="color: #d1d5db;">Microsoft 365 Administration</span>
-         </div>
-         <div class="flex items-center gap-3 p-3 rounded-lg" style="background-color: #1a2f1a;">
-          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z" />
-          </svg><span class="text-sm" style="color: #d1d5db;">Cisco Networking Foundations:IP Addressing</span>
-         </div>
-         <div class="flex items-center gap-3 p-3 rounded-lg" style="background-color: #1a2f1a;">
-          <svg class="w-5 h-5" viewbox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2"><path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z" />
-          </svg><span class="text-sm" style="color: #d1d5db;">IT Service Desk : Service Management</span>
-         </div>
-        </div>
-       </div>
-      </div>
-     </div>
-    </section><!-- Experience Section -->
+    <!-- Certificate 3 -->
+    <a href="image/cis.jpg" target="_blank" 
+       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
+       style="background-color: #1a2f1a;">
+        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+        </svg>
+        <span class="text-sm" style="color: #d1d5db;">
+            Cisco Networking Foundations: IP Addressing
+        </span>
+    </a>
+
+    <!-- Certificate 4 -->
+    <a href="image/it.jpg" target="_blank" 
+       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
+       style="background-color: #1a2f1a;">
+        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+        </svg>
+        <span class="text-sm" style="color: #d1d5db;">
+            IT Service Desk: Service Management
+        </span>
+    </a>
+
+</div>
+</div>
+</div>
+<!-- Experience Section -->
     <section id="experience" class="px-6 py-16">
      <div class="max-w-6xl mx-auto">
       <div class="flex items-center gap-3 mb-8"><span class="font-mono-custom text-sm" style="color: #22c55e;">$</span>
@@ -402,18 +426,11 @@
          </div>
          <div class="flex gap-3"><a href="https://www.linkedin.com/in/isaiah-john-austria-54731628a" class="w-10 h-10 rounded-lg flex items-center justify-center transition-all hover:opacity-80" style="background-color: #1a2f1a;">
            <svg class="w-5 h-5" viewbox="0 0 24 24" fill="#22c55e"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-           </svg></a><a href="https://www.facebook.com/isaiahjohn.25" 
-   target="_blank" 
-   rel="noopener noreferrer"
-   class="w-10 h-10 rounded-lg flex items-center justify-center transition-all hover:opacity-80" 
-   style="background-color: #1a2f1a;">
-    
+           </svg></a><a href="#" class="w-10 h-10 rounded-lg flex items-center justify-center transition-all hover:opacity-80" style="background-color: #1a2f1a;">
     <svg class="w-5 h-5" viewBox="0 0 24 24" fill="#22c55e">
         <path d="M22.675 0h-21.35C.595 0 0 .593 0 1.326v21.348C0 23.406.595 24 1.325 24h11.495v-9.294H9.691V11.01h3.129V8.414c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.313h3.587l-.467 3.696h-3.12V24h6.116C23.405 24 24 23.406 24 22.674V1.326C24 .593 23.405 0 22.675 0z"/>
     </svg>
 </a>
-
-
  <a href="#" class="w-10 h-10 rounded-lg flex items-center justify-center transition-all hover:opacity-80" style="background-color: #1a2f1a;">
            <svg class="w-5 h-5" viewbox="0 0 24 24" fill="#22c55e"><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
            </svg></a>
@@ -641,8 +658,3 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cb987c461a70dcb',t:'MTc3MDcwNDczOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
-
-
-
-
