--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             Phone
            </div>
            <div id="contact-phone" class="font-mono-custom" style="color: #f0fdf4;">
-            +63 951 394 3472
+            +63 9** *** ***2
            </div>
           </div>
          </div>
@@ -476,7 +476,7 @@
       hero_tagline: 'Resolving complex technical challenges with precision and empathy. 2+ years of experience in enterprise IT support.',
       about_text: "I'm a passionate Technical Support Engineer with a deep commitment to solving problems and helping users succeed. My expertise spans across Windows, Linux, macOS environments, cloud platforms (AWS, Azure, GCP), and enterprise networking. I believe that great technical support is not just about fixing issues—it's about understanding the user's needs, communicating clearly, and building lasting solutions that prevent future problems.",
       contact_email: 'austriaisaiahjohn6@gmail.com',
-      contact_phone: '+63 951 394 3472',
+      contact_phone: '+63 9** *** ***2',
       background_color: '#0a0f0a',
       surface_color: '#0d120d',
       text_color: '#d1d5db',
@@ -658,3 +658,4 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cb987c461a70dcb',t:'MTc3MDcwNDczOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
