--- a/index.html
+++ b/index.html
@@ -260,63 +260,114 @@
         <h3 class="font-mono-custom text-lg mb-6" style="color: #22c55e;"> Tools &amp; Platforms</h3>
         <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">ServiceNow</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">TeamViewer</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>
         </div>
-      <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">
+     <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">
     Certifications
 </h3>
 
-<div class="space-y-3">
+<div class="space-y-4">
 
-    <!-- Certificate 1 -->
-    <a href="image/win.jpg" target="_blank" 
-       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
-       style="background-color: #1a2f1a;">
-        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
-            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
-        </svg>
-        <span class="text-sm" style="color: #d1d5db;">
-            Windows 11 Advance Troubleshooting
-        </span>
+    <!-- Certificate Card -->
+    <a href="image/win.jpg" target="_blank"
+       class="cert-card flex items-center justify-between p-4 rounded-xl cursor-pointer transition-all duration-300">
+
+        <div class="flex items-center gap-3">
+            <svg class="w-5 h-5 cert-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+                <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+            </svg>
+            <span class="text-sm font-medium text-gray-300">
+                Windows 11 Advanced Troubleshooting
+            </span>
+        </div>
+
+        <span class="text-xs text-green-400 opacity-70">View</span>
     </a>
 
     <!-- Certificate 2 -->
-    <a href="image/mic.jpg" target="_blank" 
-       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
-       style="background-color: #1a2f1a;">
-        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
-            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
-        </svg>
-        <span class="text-sm" style="color: #d1d5db;">
-            Microsoft 365 Administration
-        </span>
+    <a href="image/mic.jpg" target="_blank"
+       class="cert-card flex items-center justify-between p-4 rounded-xl cursor-pointer transition-all duration-300">
+
+        <div class="flex items-center gap-3">
+            <svg class="w-5 h-5 cert-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+                <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+            </svg>
+            <span class="text-sm font-medium text-gray-300">
+                Microsoft 365 Administration
+            </span>
+        </div>
+
+        <span class="text-xs text-green-400 opacity-70">View</span>
     </a>
 
     <!-- Certificate 3 -->
-    <a href="image/cis.jpg" target="_blank" 
-       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
-       style="background-color: #1a2f1a;">
-        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
-            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
-        </svg>
-        <span class="text-sm" style="color: #d1d5db;">
-            Cisco Networking Foundations: IP Addressing
-        </span>
+    <a href="image/cis.jpg" target="_blank"
+       class="cert-card flex items-center justify-between p-4 rounded-xl cursor-pointer transition-all duration-300">
+
+        <div class="flex items-center gap-3">
+            <svg class="w-5 h-5 cert-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+                <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+            </svg>
+            <span class="text-sm font-medium text-gray-300">
+                Cisco Networking Foundations: IP Addressing
+            </span>
+        </div>
+
+        <span class="text-xs text-green-400 opacity-70">View</span>
     </a>
 
     <!-- Certificate 4 -->
-    <a href="image/it.jpg" target="_blank" 
-       class="flex items-center gap-3 p-3 rounded-lg transition-all hover:opacity-80 cursor-pointer"
-       style="background-color: #1a2f1a;">
-        <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
-            <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
-        </svg>
-        <span class="text-sm" style="color: #d1d5db;">
-            IT Service Desk: Service Management
-        </span>
+    <a href="image/it.jpg" target="_blank"
+       class="cert-card flex items-center justify-between p-4 rounded-xl cursor-pointer transition-all duration-300">
+
+        <div class="flex items-center gap-3">
+            <svg class="w-5 h-5 cert-icon" viewBox="0 0 24 24" fill="none" stroke="#22c55e" stroke-width="2">
+                <path d="M12 15l-2 5l9-13h-5l2-5l-9 13h5z"/>
+            </svg>
+            <span class="text-sm font-medium text-gray-300">
+                IT Service Desk: Service Management
+            </span>
+        </div>
+
+        <span class="text-xs text-green-400 opacity-70">View</span>
     </a>
 
 </div>
+
+<!-- Animation & Styling -->
+<style>
+.cert-card {
+    background-color: #1a2f1a;
+    border: 1px solid rgba(34, 197, 94, 0.1);
+}
+
+.cert-card:hover {
+    transform: translateY(-5px) scale(1.02);
+    box-shadow: 0 0 15px rgba(34, 197, 94, 0.4);
+    border: 1px solid rgba(34, 197, 94, 0.4);
+}
+
+.cert-icon {
+    transition: transform 0.3s ease;
+}
+
+.cert-card:hover .cert-icon {
+    transform: translateX(5px);
+}
+
+/* Subtle pulse animation to show clickable */
+@keyframes pulseGlow {
+    0% { box-shadow: 0 0 0 rgba(34, 197, 94, 0); }
+    50% { box-shadow: 0 0 10px rgba(34, 197, 94, 0.3); }
+    100% { box-shadow: 0 0 0 rgba(34, 197, 94, 0); }
+}
+
+.cert-card {
+    animation: pulseGlow 3s infinite;
+}
+</style>
 </div>
 </div>
+</div>
+
 <!-- Experience Section -->
     <section id="experience" class="px-6 py-16">
      <div class="max-w-6xl mx-auto">
@@ -367,7 +418,8 @@
          
       </div>
      </div>
-    </section><!-- Contact Section -->
+    </section>
+      <!-- Contact Section -->
     <section id="contact" class="px-6 py-16 pb-24">
      <div class="max-w-6xl mx-auto">
       <div class="flex items-center gap-3 mb-8"><span class="font-mono-custom text-sm" style="color: #22c55e;">$</span>
@@ -436,7 +488,8 @@
            </svg></a>
          </div>
         </div>
-       </div><!-- Contact Section -->
+       </div>
+       <!-- Contact Section -->
 <section id="contact" class="py-20 bg-gray-900 text-white">
   <div class="max-w-4xl mx-auto px-6">
     
@@ -496,6 +549,8 @@
     </p>
 
   </div>
+</div>
+ 
 </section>
 <!-- Footer -->
     <footer class="px-6 py-8" style="background-color: #0d120d; border-top: 1px solid #1a2f1a;">
@@ -695,5 +750,6 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cb987c461a70dcb',t:'MTc3MDcwNDczOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
