--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <div class="flex items-center gap-3 mb-8"><span class="font-mono-custom text-sm" style="color: #22c55e;">$</span>
        <h2 class="text-2xl font-bold" style="color: #f0fdf4;">Contact </h2>
       </div>
-      <div class="grid md:grid-cols-2 gap-6"><!-- Contact Info -->
+      <div class="grid md:grid-cols-2 gap-6">
        <div class="rounded-xl p-8" style="background-color: #0d120d; border: 1px solid #1a2f1a;">
         <h3 class="font-mono-custom text-lg mb-6" style="color: #22c55e;">Get in touch</h3>
         <div class="space-y-6">
@@ -439,7 +439,7 @@
             Email
            </div>
            <div id="contact-email" class="font-mono-custom" style="color: #f0fdf4;">
-           austriaisaiahjohn6@gmail.com
+           austriaisaiah
            </div>
           </div>
          </div>
@@ -471,7 +471,8 @@
            </div>
           </div>
          </div>
-        </div><!-- Social Links -->
+        </div>
+        <!-- Social Links -->
         <div class="mt-8 pt-6" style="border-top: 1px solid #1a2f1a;">
          <div class="text-sm mb-4" style="color: #9ca3af;">
           Connect with me
@@ -490,19 +491,22 @@
         </div>
        </div>
        <!-- Contact Section -->
-<section id="contact" class="py-20 bg-gray-900 text-white">
-  <div class="max-w-4xl mx-auto px-6">
+<section id="contact" class="py-16 sm:py-20 bg-gray-900 text-white">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6">
     
-    <h2 class="text-4xl font-bold mb-6 text-center">Let’s Work Together</h2>
+    <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-center">
+      Let’s Work Together
+    </h2>
     
-    <p class="text-gray-400 text-center mb-10">
+    <p class="text-gray-400 text-center mb-8 sm:mb-10 text-sm sm:text-base">
       I’m open to new opportunities, collaborations, and IT support roles.
       Feel free to reach out — I’d be happy to connect.
     </p>
 
-    <form action="https://formsubmit.co/austriaisaiahjohn6@gmail.com" 
-          method="POST"
-          class="space-y-6 bg-gray-800 p-8 rounded-lg shadow-lg">
+    <form 
+      action="https://formsubmit.co/austriaisaiahjohn6@gmail.com" 
+      method="POST"
+      class="space-y-5 sm:space-y-6 bg-gray-800 p-6 sm:p-8 rounded-lg shadow-lg">
 
       <!-- Hidden Settings -->
       <input type="hidden" name="_subject" value="New Portfolio Message">
@@ -515,7 +519,8 @@
         <input type="text" 
                name="name" 
                required
-               class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:outline-none focus:border-blue-500">
+               class="w-full p-3 rounded bg-gray-700 border border-gray-600 
+                      focus:outline-none focus:border-blue-500 text-sm sm:text-base">
       </div>
 
       <!-- Email -->
@@ -524,7 +529,8 @@
         <input type="email" 
                name="email" 
                required
-               class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:outline-none focus:border-blue-500">
+               class="w-full p-3 rounded bg-gray-700 border border-gray-600 
+                      focus:outline-none focus:border-blue-500 text-sm sm:text-base">
       </div>
 
       <!-- Message -->
@@ -533,25 +539,29 @@
         <textarea name="message" 
                   rows="5" 
                   required
-                  class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:outline-none focus:border-blue-500"></textarea>
+                  class="w-full p-3 rounded bg-gray-700 border border-gray-600 
+                         focus:outline-none focus:border-blue-500 text-sm sm:text-base">
+        </textarea>
       </div>
 
       <!-- Submit Button -->
       <button type="submit" 
-              class="w-full bg-blue-600 hover:bg-blue-700 transition duration-300 p-3 rounded font-semibold">
+              class="w-full bg-blue-600 hover:bg-blue-700 
+                     transition duration-300 p-3 rounded 
+                     font-semibold text-sm sm:text-base">
         Send Message
       </button>
 
     </form>
 
-    <p class="text-gray-500 text-center mt-6 text-sm">
+    <p class="text-gray-500 text-center mt-6 text-xs sm:text-sm">
       Response time: Within 24 hours
     </p>
 
   </div>
 </div>
- 
 </section>
+
 <!-- Footer -->
     <footer class="px-6 py-8" style="background-color: #0d120d; border-top: 1px solid #1a2f1a;">
      <div class="max-w-6xl mx-auto text-center">
