--- a/index.html
+++ b/index.html
@@ -258,9 +258,8 @@
        </div><!-- Support Tools -->
       <div class="rounded-xl p-6" style="background-color: #0d120d; border: 1px solid #1a2f1a;">
         <h3 class="font-mono-custom text-lg mb-6" style="color: #22c55e;"> Tools &amp; Platforms</h3>
-        <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">MS365 App</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Github</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Windows Server</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Microsoft Teams</span>
+        <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">MS365 App</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Github</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Windows Server</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Microsoft Teams</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Active Directory</span>
         </div>
-        
      <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">
     Certifications
 </h3>
@@ -761,6 +760,7 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cb987c461a70dcb',t:'MTc3MDcwNDczOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
