--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        <div class="flex items-center gap-3">
         <div class="w-3 h-3 rounded-full status-pulse" style="background-color: #22c55e;"></div><span class="font-mono-custom text-sm" style="color: #22c55e;">SYSTEM.ONLINE</span>
        </div>
-       <div class="hidden md:flex items-center gap-8"><a href="#about" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">About</a> <a href="#skills" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Skills</a> <a href="#experience" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Experience</a> <a href="#Contact" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Contact</a>
+       <div class="hidden md:flex items-center gap-8"><a href="#about" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">About</a> <a href="#skills" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Skills</a> <a href="#experience" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Experience</a> <a href="#contact" class="text-sm transition-colors hover:opacity-80" style="color: #9ca3af;">Contact</a>
        </div>
       </div>
      </div>
@@ -861,6 +861,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
