--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
        </div><!-- Support Tools -->
       <div class="rounded-xl p-6" style="background-color: #0d120d; border: 1px solid #1a2f1a;">
         <h3 class="font-mono-custom text-lg mb-6" style="color: #22c55e;"> Tools &amp; Platforms</h3>
-        <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">MS365 App</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Github</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Windows Server</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Microsoft Teams</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Active Directory</span>
+        <div class="flex flex-wrap gap-3"><span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">MS365 App</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">IMS</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Github</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Remote Desktop</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Windows Server</span>  <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Microsoft Teams</span> <span class="px-4 py-2 rounded-lg text-sm font-mono-custom" style="background-color: #1a2f1a; color: #22c55e;">Active Directory</span>
         </div>
      <h3 class="font-mono-custom text-lg mt-8 mb-6" style="color: #22c55e;">
     Certifications
@@ -861,6 +861,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
